[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"


[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
ndarray = "0.16.1"
nom = "7.1.3"

[dev-dependencies]
test-case = "3.3.1"
